@@ -1,5 +1,13 @@
 2012-08-31  Geoffrey Garen  <ggaren@apple.com>
 
+        Not reviewed.
+
+        Removed some tabs that snuck into my last patch.
+
+        * fast/js/function-constructor-this-value.html:
+
+2012-08-31  Geoffrey Garen  <ggaren@apple.com>
+
         Use one object instead of two for closures, eliminating ScopeChainNode
         https://bugs.webkit.org/show_bug.cgi?id=95501
 
